--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Test de Arquetipos Masculinos PRO</title>
+<title>Test de Arquetipos</title>
 
 <link rel="stylesheet" href="style.css">
 
@@ -15,7 +15,7 @@
 
 <div class="container">
 
-<h1>🔥 Test de Arquetipos Masculinos</h1>
+<h1>Test de Arquetipos</h1>
 <p class="subtitle">Responde del 1 al 5 (1 = Nunca | 5 = Siempre)</p>
 
 <div id="questions"></div>
