--- a/index.html
+++ b/index.html
@@ -26,8 +26,12 @@
 
 <canvas id="grafico"></canvas>
 
+<button id="copyPromptBtn" onclick="copiarPrompt()" style="display:none;">
+Copiar Prompt para ChatGPT
+</button>
+
 <button id="pdfBtn" onclick="descargarPDF()" style="display:none;">
-Descargar PDF
+Descargar Informe PDF
 </button>
 
 </div>
