--- a/index.html
+++ b/index.html
@@ -3,39 +3,73 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Test de Arquetipos</title>
+
+<title>Leadership Styles Analyzer</title>
 
 <link rel="stylesheet" href="style.css">
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
 
 </head>
 <body>
 
-<div class="container">
+<div class="app">
 
-<h1>Test de Arquetipos</h1>
-<p class="subtitle">Responde del 1 al 5 (1 = Nunca | 5 = Siempre)</p>
+<header>
+    <h1>Leadership Styles Analyzer</h1>
+    <p>Amable · Analítico · Emprendedor · Expresivo</p>
+</header>
 
-<div id="questions"></div>
+<section class="card" id="assessment"></section>
 
-<button onclick="calcular()">Ver Resultado</button>
+<div class="center">
+    <button class="primary" onclick="calculate()">Generar Resultado</button>
+</div>
 
-<div id="resultado" class="result"></div>
+<section id="results" class="hidden">
 
-<canvas id="grafico"></canvas>
+<div id="report">
 
-<button id="copyPromptBtn" onclick="copiarPrompt()" style="display:none;">
-Copiar Prompt para ChatGPT
-</button>
+<div class="grid">
 
-<button id="pdfBtn" onclick="descargarPDF()" style="display:none;">
-Descargar Informe PDF
-</button>
+<div class="card score" id="amableCard"></div>
+<div class="card score" id="analiticoCard"></div>
+<div class="card score" id="emprendedorCard"></div>
+<div class="card score" id="expresivoCard"></div>
+
+</div>
+
+<div class="grid">
+
+<div class="card">
+<canvas id="radarChart"></canvas>
+</div>
+
+<div class="card">
+<canvas id="quadrantChart"></canvas>
+</div>
+
+</div>
+
+<div class="card" id="interpretation"></div>
+
+<div class="card">
+<h3>Prompt Personalizado</h3>
+<textarea id="promptOutput"></textarea>
+</div>
+
+</div>
+
+<div class="center">
+<button class="secondary" onclick="downloadPDF()">Descargar PDF</button>
+</div>
+
+</section>
 
 </div>
 
 <script src="script.js"></script>
+
 </body>
 </html>
