--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Estilos de Liderazgo</title>
+<title>Test de Arquetipos</title>
 
 <link rel="stylesheet" href="style.css">
 
@@ -16,8 +16,8 @@
 <div class="app">
 
 <header>
-<h1>Test de Estilos de Liderazgo</h1>
-<p>Afable — Emprendedor — Analítico — Extrovertido</p>
+<h1>Test de Arquetipos</h1>
+<p>Responde según tu comportamiento habitual</p>
 </header>
 
 <div id="questions" class="questions"></div>
@@ -28,8 +28,12 @@
 
 <canvas id="grafico"></canvas>
 
+<button id="copyPromptBtn" class="secondary-btn" onclick="copiarPrompt()" style="display:none;">
+Copiar Prompt para ChatGPT
+</button>
+
 <button id="pdfBtn" class="secondary-btn" onclick="descargarPDF()" style="display:none;">
-Descargar Informe
+Descargar Informe PDF
 </button>
 
 </div>
